--- a/config.cfg.example
+++ b/config.cfg.example
@@ -1,3 +1,6 @@
-[Tokens]  
-bazarr_token = value1  
-sonarr_token = value2 
+[bazarr]  
+url = http://1.1.1.1
+token = djfkjadncdfjkanvfjkvandfj  
+[sonarr]
+url = http://2.2.2.2:8989
+sonarr_token = dfifdmnajcdnjcvaldnjlk
