--- a/config.cfg.example
+++ b/config.cfg.example
@@ -3,4 +3,4 @@ url = http://1.1.1.1
 token = djfkjadncdfjkanvfjkvandfj  
 [sonarr]
 url = http://2.2.2.2:8989
-sonarr_token = dfifdmnajcdnjcvaldnjlk
+token = dfifdmnajcdnjcvaldnjlk
