cleanup and add ability to process specifc show only

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,8 @@
             "args": [
                 "--model",
                 "base",
+                "--show",
+                "Gary Neville's Soccerbox"
             ],
         }
     ]
