--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 tqdm==4.56.0
 ffmpeg-python==0.2.0
 git+https://github.com/openai/whisper.git
+faster-whisper
+nvidia-cublas-cu12
+nvidia-cudnn-cu12
+nvidia-cublas-cu11
+nvidia-cudnn-cu11
+ctranslate2==3.24.0
